# pyroe

./: pyproject.toml
src/pyroe/: ProcessedQuant.py  __init__.py  __main__.py  convert.py  id_to_name.py  make_splici_txome.py  make_txome.py  pyroe_utils.py
